<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/ic_menu_camera"
      android:title="@string/menu_home" />

    <item
      android:id="@+id/nav_profile"
      android:icon="@drawable/ic_menu_gallery"
      android:title="@string/menu_profile" />

    <item
      android:id="@+id/nav_my_profile"
      android:icon="@drawable/side_nav_bar"
      android:title="My Profile" />

    <item
      android:id="@+id/nav_requests"
      android:icon="@drawable/ic_chat_black_24dp"
      android:title="@string/requests" />
    <!--
    <item
      android:id="@+id/nav_tutor"
      android:icon="@drawable/side_nav_bar"
      android:title="@string/menu_tutor" />
    -->
    <item
      android:id="@+id/nav_tutor_new"
      android:icon="@drawable/side_nav_bar"
      android:title="Tutor" />

    <!--
    <item
      android:id="@+id/nav_current_tutors"
      android:icon="@drawable/side_nav_bar"
      android:title="Current Tutors" />

    <item
      android:id="@+id/nav_request_tutor"
      android:icon="@drawable/side_nav_bar"
      android:title="@string/menu_request_tutor" />

    <item
      android:id="@+id/nav_search_tutor"
      android:icon="@drawable/side_nav_bar"
      android:title="Search Tutor" />
    -->

    <item
            android:id="@+id/nav_ViewStudentActivity"
            android:icon="@drawable/side_nav_bar"
            android:title="Current Students" />

    <item
      android:id="@+id/nav_review"
      android:icon="@drawable/side_nav_bar"
      android:title="@string/menu_review" />

    <item
            android:id="@+id/nav_history"
            android:icon="@drawable/side_nav_bar"
            android:title="History"
            />

  </group>

  <item android:title="Communicate">
    <menu>
      <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_share" />
      <item
        android:id="@+id/nav_send"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_send" />
    </menu>
  </item>

  <item android:title="System">
    <menu>
      <item
          android:id="@+id/nav_settings"
          android:icon="@drawable/ic_baseline_settings_24"
          android:title="@string/menu_settings" />
    </menu>
  </item>

  <item
    android:id="@+id/nav_logout"
    android:icon="@drawable/ic_baseline_power_settings_new_24"
    android:title="@string/menu_logout" />
</menu>
