<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@+id/mobile_navigation"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:startDestination="@id/nav_home">

  <fragment
          android:id="@+id/nav_home"
          android:name="com.company1.gpasaver.ui.home.HomeFragment"
          android:label="@string/menu_home"
          tools:layout="@layout/fragment_home" >
    <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_profile" />
    <action
            android:id="@+id/action_nav_home_to_nav_requests"
            app:destination="@id/nav_requests" />
  </fragment>

  <fragment
    android:id="@+id/nav_profile"
    android:name="com.company1.gpasaver.ui.profile.ProfileFragment"
    android:label="@string/menu_profile"
    tools:layout="@layout/fragment_profile" >
    <!--
    <action
      android:id="@+id/action_nav_gallery_to_nav_my_profile"
      app:destination="@id/nav_slideshow" />
    -->
  </fragment>

  <fragment
          android:id="@+id/nav_my_profile"
          android:name="com.company1.gpasaver.ui.profile.MyProfile"
          android:label="@string/menu_profile"
          tools:layout="@layout/activity_my_profile" >
    <!--
    <action
            android:id="@+id/action_nav_my_profile_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    -->
  </fragment>
  <!--
  <fragment
    android:id="@+id/nav_slideshow"
    android:name="com.company1.gpasaver.ui.slideshow.SlideshowFragment"
    android:label="@string/menu_slideshow"
    tools:layout="@layout/fragment_slideshow" >
    <action
      android:id="@+id/action_nav_slideshow_to_nav_tools"
      app:destination="@id/nav_tools" />
  </fragment>

  <fragment
    android:id="@+id/nav_tools"
    android:name="com.company1.gpasaver.ui.tools.ToolsFragment"
    android:label="@string/menu_tools"
    tools:layout="@layout/fragment_tools" >
    <action
      android:id="@+id/action_nav_tools_to_nav_share"
      app:destination="@id/nav_tutor_new" />
  </fragment>

  <fragment
      android:id="@+id/nav_tutor"
      android:name="com.company1.gpasaver.ui.tutor.TutorFragment"
      android:label="@string/menu_tutor"
      tools:layout="@layout/activity_tutor" >
    <action
        android:id="@+id/action_nav_tutor_to_nav_request_tutor"
        app:destination="@id/nav_request_tutor" />
  </fragment>
  -->
  <fragment
          android:id="@+id/nav_tutor_new"
          android:name="com.company1.gpasaver.ui.tutor.StudentViewTutorFragment"
          android:label="Tutor"
          tools:layout="@layout/activity_tutor_new">
    <action
            android:id="@+id/action_nav_tutor_to_nav_request_tutor"
            app:destination="@id/nav_request_tutor" />
    <action
            android:id="@+id/action_nav_tutor_to_nav_search_tutor"
            app:destination="@id/nav_search_tutor" />
    <action
            android:id="@+id/action_nav_tutor_to_nav_view_tutor"
            app:destination="@id/nav_view_tutors" />

  </fragment>
  <!--
  <activity
          android:id="@+id/nav_tutor_new"
          android:name="com.company1.gpasaver.ui.tutor.TutorActivity"
          android:label="Tutor New"
          tools:layout="@layout/activity_tutor_new">

  </activity>
  -->
  <fragment
      android:id="@+id/nav_view_tutors"
      android:name="com.company1.gpasaver.current_tutors"
      android:label="View/Cancel Tutor"
      tools:layout="@layout/activity_current_tutors">
      <action
        android:id="@+id/action_nav_current_tutors_to_nav_review"
        app:destination="@id/nav_review" />
  </fragment>

  <fragment
      android:id="@+id/nav_request_tutor"
      android:name="com.company1.gpasaver.ui.requestTutor.RequestTutorFragment"
      android:label="@string/menu_request_tutor"
      tools:layout="@layout/activity_request_tutor" >
    <action
        android:id="@+id/action_nav_request_tutor_to_nav_search_tutor"
        app:destination="@id/nav_review" />
  </fragment>

  <fragment
          android:id="@+id/nav_ViewStudentActivity"
          android:name="com.company1.gpasaver.ViewStudentActivity"
          android:label="CurrentStudents"
          tools:layout="@layout/activity_view_student">
    <action android:id="@+id/action_nav_current_tutor_to_nav_review"
            app:destination="@id/nav_search_tutor" />
  </fragment>

  <fragment
          android:id="@+id/nav_search_tutor"
          android:name="com.company1.gpasaver.FindTutorActivity"
          android:label="Search Tutor"
          tools:layout="@layout/activity_find_tutor" >
    <action
            android:id="@+id/action_nav_search_tutor_to_nav_review"
            app:destination="@id/nav_review" />
  </fragment>


  <fragment
          android:id="@+id/nav_review"
          android:name="com.company1.gpasaver.ui.review.ReviewFragment"
          android:label="@string/menu_review"
          tools:layout="@layout/activity_review" >
    <action
            android:id="@+id/action_nav_review_to_nav_history"
            app:destination="@id/nav_share" />
  </fragment>

  <fragment
          android:id="@+id/nav_history"
          android:name="com.company1.gpasaver.ui.paymenthistory.PaymentHistoryFragment"
          android:label="History"
          tools:layout="@layout/fragment_payment_history" >
    <action
            android:id="@+id/action_nav_history_to_nav_share"
            app:destination="@id/nav_share" />
  </fragment>

  <fragment
          android:id="@+id/nav_share"
          android:name="com.company1.gpasaver.ui.share.ShareFragment"
          android:label="@string/menu_share"
          tools:layout="@layout/fragment_share" >
    <action
            android:id="@+id/action_nav_share_to_nav_send"
            app:destination="@id/nav_send" />
  </fragment>

  <fragment
          android:id="@+id/nav_send"
          android:name="com.company1.gpasaver.ui.send.SendFragment"
          android:label="@string/menu_send"
          tools:layout="@layout/fragment_send" />

  <fragment
          android:id="@+id/nav_requests"
          android:name="com.company1.gpasaver.ui.requests.RequestsFragment"
          android:label="Requests"
          tools:layout="@layout/fragment_requests" />

  <fragment
          android:id="@+id/nav_settings"
          android:name="com.company1.gpasaver.ui.settings.SettingsFragment"
          android:label="Settings"
          tools:layout="@layout/fragment_settings" />
</navigation>